Fixing color contrast ratios

--- a/source/_patterns/00-protons/_uswds-theme-utilities.scss
+++ b/source/_patterns/00-protons/_uswds-theme-utilities.scss
@@ -581,7 +581,7 @@ Values
 ----------------------------------------
 */
 
-$jcc-cyan: #0186d0;
+$jcc-cyan: #017cc1;
 
 // .add-aspect
 
